# mnist-neural-network-cpp

./: .gitignore  CMakeLists.txt  README.md
src/: Log.cpp  MNIST_Training.cpp  MNIST_Utils.cpp  Neural_Network.cpp  Neural_Network_Layer.cpp  main.cpp
src/include/: Log.hpp  MNIST_Training.hpp  MNIST_Utils.hpp  Matrix.hpp  Model_Config.hpp  Neural_Network.hpp  Neural_Network_Layer.hpp  main.hpp
